--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "shola_web",
-    "short_name": "shola_web",
+    "name": "untitled1",
+    "short_name": "untitled1",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
